Fixed tooltip overflow bug

--- a/packages/cbioportal-frontend-commons/src/components/scatterPlot/styles.scss
+++ b/packages/cbioportal-frontend-commons/src/components/scatterPlot/styles.scss
@@ -4,7 +4,7 @@
         display: block !important;
         max-width: 600px !important;
         div:last-child {
-            white-space: nowrap;
+            // white-space: nowrap;
         }
 
         p {
